--- a/demo/index.html
+++ b/demo/index.html
@@ -13,7 +13,7 @@
   <div id="wrap">
       <div id="left-panel">
           <div class="header">
-              <h2>Geomblank</h2>
+              <h2>Bentley-ottman sweepline</h2>
           </div>
           <div id="content">
           </div>
