Make release-ready demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -13,9 +13,16 @@
   <div id="wrap">
       <div id="left-panel">
           <div class="header">
-              <h2>Bentley-ottman sweepline</h2>
+              <h2>Bentley-ottman segments intersection algorithm</h2>
           </div>
           <div id="content">
+              <div class="row number-row">
+                  <span>segments:</span>
+                  <input class="segments-number" type="number" value="50"></input>
+              </div>
+              <div class="row button-row">
+                  <input class="generate" type="button" value="Generate"></input>
+              </div>
           </div>
       </div>
       <div id="map">
